# eesigorta-v2

./: .gitignore  ACENTE_KULLANIMI.md  DEPLOYMENT_SUMMARY.md  QUICKSTART.md  README.md  test_scraper.sh
backend/: .gitignore  Cargo.toml  README.md  env.template  run.sh
backend/migrations/: 001_init.sql
backend/src/: config.rs  main.rs
backend/src/auth/: jwt.rs  middleware.rs  mod.rs  password.rs
backend/src/db/: mod.rs  models.rs  policies.rs  quotes.rs  users.rs
backend/src/routes/: admin_routes.rs  auth_routes.rs  mod.rs  policy_routes.rs  quote_routes.rs  user_routes.rs
backend/src/scraper/: mod.rs  models.rs  python_bridge.rs
frontend/: env.local.example  package-lock.json  package.json  run.sh
frontend/app/: layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/ayarlar/: page.tsx
frontend/app/kasko/: page.tsx
frontend/app/policeler/: page.tsx
frontend/app/teklifler/: page.tsx
frontend/app/trafik/: page.tsx
frontend/components/: dashboard-wrapper.tsx
frontend/lib/: api-client.ts
scrapers/: env_config.txt  env_example.txt  main.py  otp_dom_dump.html  requirements.txt  run_backend.py  test_quick.py  test_sompo.py
scrapers/anadolu/: main.py
scrapers/app/: browser.py  jobs.py  main.py  models.py  store.py  utils.py
scrapers/app/adapters/: mock_quick.py  mock_sompo.py
scrapers/app/connectors/: anadolu.py  axa.py  base.py  quick.py  sompo.py  sompo_login.py
scrapers/axa/: main.py
scrapers/playwright/: sompo_scraper.py
scrapers/quick/: main.py
scrapers/scrapers/: insurance_scraper.py
scrapers/sompo/: main.py
(+4 files in other folders)
